[tool.poetry]
name = "RNAProbes"
version = "0.0.1"
description = "Webserver for modeling RNA Probes"
authors = ["Irina Catrina", "Avi Kohn"]
license = "GPL-2.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3"
Bio = "*"
pandas = "*"
gunicorn = "*"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"